# memory-ml

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
notebooks/: benchmark_dataset.ipynb  eda.ipynb  nn_sweep.ipynb  nn_train.ipynb  train_model.ipynb
src/: small_dataset.py
src/models/: __init__.py  neural_net.py
test/: test_small_dataset.py
