[tool.poetry]
name = "memory-ml"
version = "0.1.0"
description = ""
authors = ["Maxence Frenette <maxence.frenette@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.0"
ipykernel = "^6.29.0"
matplotlib = "^3.8.2"
torch = "^2.1.2"
lightning = "^2.2.0"
wandb = "^0.16.3"
pyarrow = "^15.0.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
